--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -13,8 +13,21 @@ Kevin:
   email: kevin@example.com
   password_digest: <%= User.digest("password") %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 Mark:
   name: Mark Example
   email: mark@example.com
   password_digest: <%= User.digest("password") %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}"%>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest("password") %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+<% end %>
