--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -23,6 +23,13 @@ Mark:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+David:
+  name: David Example
+  email: david@example.com
+  password_digest: <%= User.digest("password") %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}"%>
